@@ -1029,7 +1029,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# TableParser package 2462
+# TableParser package 2749
 # ###########################################################################
 package TableParser;
 
@@ -1166,7 +1166,7 @@ sub sort_indexes {
          $tbl->{keys}->{$_}->{type} eq 'BTREE'
       }
       sort keys %{$tbl->{keys}};
-   
+
    MKDEBUG && _d('Indexes sorted best-first: ' . join(', ', @indexes));
    return @indexes;
 }
@@ -1218,10 +1218,13 @@ sub find_possible_keys {
 }
 
 sub table_exists {
-   my ( $self, $dbh, $db, $tbl, $quoter ) = @_;
-   my $sql = 'SELECT * FROM ' . $quoter->quote($db, $tbl) . ' LIMIT 0';
-   my $href;
-   eval { $href = $dbh->selectrow_hashref($sql) };
+   my ( $self, $dbh, $db, $tbl, $q, $can_insert ) = @_;
+   my $db_tbl = $q->quote($db, $tbl);
+   my $sql    = $can_insert ? "REPLACE INTO $db_tbl " : '';
+   $sql      .= "SELECT * FROM $db_tbl LIMIT 0";
+   MKDEBUG && _d("table_exists check for $db_tbl: $sql");
+   eval { $dbh->do($sql); };
+   MKDEBUG && _d("eval error (if any): $EVAL_ERROR");
    return 0 if $EVAL_ERROR;
    return 1;
 }
@@ -1235,7 +1238,7 @@ sub get_engine {
 sub get_keys {
    my ( $self, $ddl, $opts ) = @_;
 
-   my @indexes = 
+   my @indexes =
       grep { $_ !~ m/FOREIGN/ }
       $ddl =~ m/((?:\w+ )?KEY .+\))/mg;
 
@@ -1410,7 +1413,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# RowDiff package 2215
+# RowDiff package 2786
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -1433,17 +1436,27 @@ sub compare_sets {
    my ( $left, $right, $syncer, $tbl )
       = @args{qw(left right syncer tbl)};
 
-   my ($lr, $rr);       # Current row from the left/right sources.
+   my ($lr, $rr);  # Current row from the left/right sources.
+
+   my ($left_done, $right_done) = (0, 0);
 
    do {
-
-      if ( !$lr && $left->{Active} ) {
+      if ( !$lr && !$left_done ) {
          MKDEBUG && _d('Fetching row from left');
-         $lr = $left->fetchrow_hashref;
+         $lr = $left->fetchrow_hashref();
+         $left_done = ($lr ? 0 : 1);
       }
-      if ( !$rr && $right->{Active} ) {
+      elsif ( MKDEBUG ) {
+         _d('Left still has rows');
+      }
+
+      if ( !$rr && !$right_done ) {
          MKDEBUG && _d('Fetching row from right');
-         $rr = $right->fetchrow_hashref;
+         $rr = $right->fetchrow_hashref();
+         $right_done = ($rr ? 0 : 1);
+      }
+      elsif ( MKDEBUG ) {
+         _d('Right still has rows');
       }
 
       my $cmp;
@@ -1469,7 +1482,7 @@ sub compare_sets {
             $rr = undef;
          }
       }
-   } while ( $left->{Active} || $right->{Active} || $lr || $rr );
+   } while ( !($left_done && $right_done) );
    MKDEBUG && _d('No more rows');
    $syncer->done_with_rows();
 }
@@ -2425,7 +2438,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# TableChecksum package 2403
+# TableChecksum package 2607
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -2746,7 +2759,8 @@ sub find_replication_differences {
          COALESCE(
             this_crc <> master_crc OR ISNULL(master_crc) <> ISNULL(this_crc),
             0
-         ) AS crc_diff
+         ) AS crc_diff,
+         this_cnt, master_cnt, this_crc, master_crc
       FROM $table
       WHERE master_cnt <> this_cnt OR master_crc <> this_crc
       OR ISNULL(master_crc) <> ISNULL(this_crc)
@@ -3941,7 +3955,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# TableNibbler package 2215
+# TableNibbler package 2783
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -4150,29 +4164,26 @@ sub generate_del_stmt {
 
 sub generate_ins_stmt {
    my ( $self, %args ) = @_;
+   foreach my $arg ( qw(ins_tbl sel_cols) ) {
+      die "I need a $arg argument" unless $args{$arg};
+   }
+   my $ins_tbl  = $args{ins_tbl};
+   my @sel_cols = @{$args{sel_cols}};
 
-   my $tbl  = $args{tbl};
-   my @cols = @{$args{cols}};
+   die "You didn't specify any SELECT columns" unless @sel_cols;
 
-   die "You didn't specify any columns" unless @cols;
-
-   my %col_posn = do { my $i = 0; map { $_ => $i++ } @{$tbl->{cols}} };
    my @ins_cols;
    my @ins_slice;
-
-   foreach my $col ( @cols ) {
-      if ( exists $col_posn{$col} ) {
-         push @ins_cols, $col;
-         push @ins_slice, $col_posn{$col};
-      }
+   for my $i ( 0..$#sel_cols ) {
+      next unless $ins_tbl->{is_col}->{$sel_cols[$i]};
+      push @ins_cols, $sel_cols[$i];
+      push @ins_slice, $i;
    }
 
-   my $ins_stmt = {
+   return {
       cols  => \@ins_cols,
       slice => \@ins_slice,
    };
-
-   return $ins_stmt;
 }
 
 sub _d {
